--- a/package.json
+++ b/package.json
@@ -2,9 +2,24 @@
   "name": "news-apollo-server",
   "version": "1.0.0",
   "description": "Graphql apollo2 server",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "nodemon --exec babel-node server.js"
+  },
+  "jest": {
+    "coverageThreshold": {
+      "global": {
+        "branches": 90,
+        "functions": 90,
+        "lines": 9,
+        "statements": 90
+      }
+    },
+    "coverageReporters": [
+      "html",
+      "text"
+    ]
   },
   "repository": {
     "type": "git",
