--- a/package.json
+++ b/package.json
@@ -35,5 +35,20 @@
   "bugs": {
     "url": "https://github.com/storiaca/news-apollo-server/issues"
   },
-  "homepage": "https://github.com/storiaca/news-apollo-server#readme"
+  "homepage": "https://github.com/storiaca/news-apollo-server#readme",
+  "dependencies": {
+    "apollo-datasource-rest": "^0.6.9",
+    "apollo-server": "^2.9.13",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.7.5",
+    "@babel/core": "^7.7.5",
+    "@babel/node": "^7.7.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.7.5",
+    "@babel/preset-env": "^7.7.6",
+    "apollo-server-testing": "^2.9.13",
+    "jest": "^24.9.0",
+    "nodemon": "^2.0.2"
+  }
 }
